# amqp-sample-publisher

./: Cargo.toml
src/: main.rs
