[package]
name = "amqp-sample-publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../rdkafka-sample-model" }
bincode = "1"
clap = { version = "4", features = ["derive"] }
lapin = "2.1.1"
async-global-executor = "2.3.1"
futures-lite = "^1.7"
